--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: Roboto;
     margin: 0;
     padding: 0;
+    /* border: 2px solid red; */
 }
 
 body {
@@ -83,4 +84,48 @@ button {
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 80px;
+}
+
+.info > *{
+    padding: 50px 30px 10px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    gap: 2rem;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 160px;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.container {
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+}
+
+.info .txt {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.subtext {
+    width: 140px;
 }
