--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #F9FAF8;
     background-color: #1F2937;
     padding: 17px 140px;
 }
@@ -24,6 +23,7 @@ header {
 .logo {
     font-weight: 800;
     font-size: 24px;
+    color: #F9FAF8;
 }
 
 ul {
@@ -35,6 +35,7 @@ li {
     list-style-type: none;
     font-size: 18px;
     font-weight: 300;
+    color: #E5E7EB;
 }
 
 .hero {
@@ -128,4 +129,24 @@ button {
 
 .subtext {
     width: 140px;
+}
+
+.quote {
+    display: flex;
+    background-color: #E5E7EB;
+    flex-direction: column;
+    padding: 130px 280px;
+}
+
+.quote .text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+}
+
+.speaker {
+    align-self: flex-end;
+    font-weight: 600;
+    font-size: 24px;
 }
